--- a/pom.xml
+++ b/pom.xml
@@ -10,4 +10,33 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
+    <dependencies>
+        <dependency>
+            <groupId>com.googlecode.json-simple</groupId>
+            <artifactId>json-simple</artifactId>
+            <version>1.1.1</version>
+        </dependency>
+    </dependencies>
+    
+    <!--  dependency from meneer
+    
+<dependency>
+<groupId>com.googlecode.json-simple</groupId>
+<artifactId>json-simple</artifactId>
+<version>1.1.1</version>
+<exclusions>
+<exclusion>
+<groupId>junit</groupId>
+<artifactId>junit</artifactId>
+</exclusion>
+</exclusions>
+</dependency>
+    -->
+    <!--  
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.10</version>
+        </dependency>
+    -->
 </project>
