--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,11 @@
             <artifactId>commons-dbcp2</artifactId>
             <version>2.7.0</version>
         </dependency>
+        <dependency>
+  <groupId>jboss.web</groupId>
+  <artifactId>servlet-api</artifactId>
+  <version>2.1.0.GA</version>
+</dependency>
     </dependencies>
     
     <!--  dependency from meneer
