--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
             <artifactId>commons-dbcp2</artifactId>
             <version>2.7.0</version>
         </dependency>
+    </dependencies>
     
     <!--  dependency from meneer
     
