updated the pom with item in the plugin

--- a/pom.xml
+++ b/pom.xml
@@ -21,10 +21,11 @@
         <processTypes>
           <web>java $JAVA_OPTS -cp target/classes:target/dependency/* com.mycompany.mavenproject1</web>
         </processTypes>
-      </configuration>
-      <configuration>
   <appName>Server</appName>
-</configuration>
+    <descriptorRefs>
+      <descriptorRef>jar-with-dependencies</descriptorRef>
+    </descriptorRefs>
+      </configuration>
     </plugin>
   </plugins>
 </build>
