--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
       <configuration>
         <appName>${heroku.appName}</appName>
         <processTypes>
-          <web>java $JAVA_OPTS -cp target/classes:target/dependency/* com.mycompany.mavenproject1</web>
+          <web>java $JAVA_OPTS -cp target/classes:target/dependency/* com.mycompany.mavenproject1.ServerTest</web>
         </processTypes>
   <appName>Server</appName>
     <descriptorRefs>
@@ -27,6 +27,11 @@
     </descriptorRefs>
       </configuration>
     </plugin>
+      <plugin>
+        <groupId>com.heroku.sdk</groupId>
+        <artifactId>heroku-maven-plugin</artifactId>
+        <version>3.0.3</version>
+      </plugin>
   </plugins>
 </build>
     <dependencies>
