--- a/pom.xml
+++ b/pom.xml
@@ -18,9 +18,9 @@
       <version>3.0.4</version>
       <configuration>
         <appName>Server</appName>
-        <processTypes>
+       <!-- <processTypes>
           <web>java $JAVA_OPTS -cp target/classes:target/dependency/* Server</web>
-        </processTypes>
+        </processTypes>-->
   <appName>Server</appName>
     <descriptorRefs>
       <descriptorRef>jar-with-dependencies</descriptorRef>
