--- a/pom.xml
+++ b/pom.xml
@@ -13,26 +13,32 @@
     <build>
   <plugins>
     <plugin>
-        <groupId>com.jcabi</groupId>
-        <artifactId>jcabi-heroku-maven-plugin</artifactId>
-        <version>0.8</version>
-        <executions>
-          <execution>
-            <goals>
-              <goal>deploy</goal>
-            </goals>
-            <configuration>
+      <groupId>com.heroku.sdk</groupId>
+      <artifactId>heroku-maven-plugin</artifactId>
+      <version>3.0.4</version>
+      <configuration>
         <appName>Server</appName>
-              <server>heroku.com</server>
-              <name>my-application</name>
-              <artifacts>
-                <artifact>${sign}{project.groupId}:${sign}{project.artifactId}:jar::${sign}{project.version}</artifact>
-              </artifacts>
-              <procfile>web: java -jar ./${sign}{project.artifactId}.jar --port=${sign}{PORT}</procfile>
-            </configuration>
-          </execution>
-        </executions>
+       <!-- <processTypes>
+          <web>java $JAVA_OPTS -cp target/classes:target/dependency/* Server</web>
+        </processTypes>-->
+  <appName>Server</appName>
+    <descriptorRefs>
+      <descriptorRef>jar-with-dependencies</descriptorRef>
+    </descriptorRefs>
+      </configuration>
     </plugin>
+    <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <version>3.0.1</version>
+                <executions>
+                    <execution>
+                        <id>copy-dependencies</id>
+                        <phase>package</phase>
+                        <goals><goal>copy-dependencies</goal></goals>
+                    </execution>
+                </executions>
+            </plugin>
   </plugins>
 </build>
     <dependencies>
